// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should renders Tag properly 1`] = `
<a
  aria-pressed="false"
  class="fr-tag"
  href="/"
  title="titre"
>
  tag-test
</a>
`;

exports[`<Tag /> should renders TagGroup properly 1`] = `
<ul
  class="fr-tags-group"
  data-testid="taggroup"
>
  <li>
    <span
      aria-pressed="false"
      class="fr-tag fr-tag--sm"
      data-testid="tag1"
    >
      tag-test
    </span>
  </li>
  <li>
    <span
      aria-pressed="false"
      class="fr-tag fr-tag--sm"
      data-test-id="tag2"
    >
      tag-test
    </span>
  </li>
  <li>
    <span
      aria-pressed="false"
      class="fr-tag fr-tag--sm"
      data-test--id="tag3"
    >
      tag-test
    </span>
  </li>
  <li>
    <span
      aria-pressed="false"
      class="fr-tag fr-tag--sm"
      data-test="tag4"
    >
      tag-test
    </span>
  </li>
</ul>
`;

exports[`<Tag /> should renders small Tag properly 1`] = `
<span
  aria-pressed="false"
  class="fr-tag fr-tag--sm"
>
  tag-test
</span>
`;
